using System;
using System.Collections.Generic;
using System.Text;

namespace LottasLopper {
	class Stats {

		public static int TotalEarnings { get; set; }
		public static int ItemsSold { get; set; }
		public static int ItemsListed { get; set; }
		public static int SellersActive { get; set; }
		public static int CustomersActive { get; set; }

	}
}
